syntax = "proto3";

option go_package = "github.com/tensorsystems/tensoremr/libs/proto/pkg/terminology";
option java_multiple_files = true;
option java_package = "net.tensorsystems.tensoremr.terminology.grpc";
option java_outer_classname = "TensorEMRTermonologyProto";

package main;

// The termonology service definition.
service Terminology {
  rpc GetHistoryOfDisorders (LookupRequest) returns (SnomedCtResponse) {}
}

message EmptyRequest {

}

message LookupRequest {
  int64 size = 1;
  string searchTerm  = 2;
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message SnomedCT {
  string id = 1;
  string caseSignificanceId = 2;
  string nodetype = 3;
  string acceptabilityId = 4;
  string refsetId = 5;
  string languageCode = 6;
  string descriptionType = 7;
  string term = 8;
  string typeId = 9;
  string moduleId = 10;
  string sctid = 11;
}

message SnomedCtResponse {
  repeated SnomedCT items = 1;
  int64 total = 2;
}